diesel_compile_tests/tests/fail/order_requires_column_from_same_table.stderr
error[E0277]: the trait bound `FromClause<users::table>: AppearsInFromClause<posts::table>` is not satisfied
  --> tests/fail/order_requires_column_from_same_table.rs:18:31
   |
18 |     let source = users::table.order(posts::id);
   |                               ^^^^^ the trait `AppearsInFromClause<posts::table>` is not implemented for `FromClause<users::table>`
   |
   = help: the trait `AppearsInFromClause<QS1>` is implemented for `FromClause<QS2>`
note: required because of the requirements on the impl of `AppearsOnTable<FromClause<users::table>>` for `posts::columns::id`
  --> tests/fail/order_requires_column_from_same_table.rs:13:9
   |
13 |         id -> Integer,
   |         ^^
   = note: required because of the requirements on the impl of `OrderDsl<posts::columns::id>` for `SelectStatement<FromClause<users::table>>`
